--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-# 2016web1-10
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" type="text/css" href="css/default.css">
+    <title>練習１０</title>
+  </head>
