--- a/index.html
+++ b/index.html
@@ -6,3 +6,25 @@
     <link rel="stylesheet" type="text/css" href="css/default.css">
     <title>練習１０</title>
   </head>
+  <body>
+    <header>
+      <h1>header</h1>
+    </header>
+    <div id="main">
+        <section>
+          <h1>main</h1>
+        </section>
+      <div id="side">
+        <aside>
+          <h1>side1</h1>
+        </aside>
+        <aside>
+          <h1>side2</h1>
+        </aside>
+      </div>
+    </div>
+    <footer>
+      <h1>footer</h1>
+    </footer>
+  </body>
+</html>
